# Churn

./: README.md  lr.ipynb  pyproject.toml  test.ipynb
