[tool.poetry]
name = "python stuff"
version = "0.1.0"
description = ""
authors = ["Emma Feinstone"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
jupyter = "^1.0.0"
numpy = "^2.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
pyhumps = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
